--- a/_notebooks/2023-08-30-basics-js-with-html.ipynb
+++ b/_notebooks/2023-08-30-basics-js-with-html.ipynb
@@ -8,11 +8,9 @@
     "title: Using Javascript with HTML DOM\n",
     "hide: True\n",
     "description: A Tech Talk on how javascript can interact with HTML DOM\n",
-    "type: hacks\n",
+    "type: ccc\n",
     "permalink: /basics/dom\n",
     "author: Rohan Juneja\n",
-    "comments: True\n",
-    "courses: {csp: {week: 5} }\n",
     "---"
    ]
   },
@@ -20,7 +18,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "{% include nav_basics.html %}\n"
+    "{% include nav_basics.html %}"
    ]
   },
   {
@@ -47,11 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%html\n",
@@ -81,11 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%html\n",
@@ -113,11 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%html\n",
@@ -146,11 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%html\n",
@@ -196,11 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%html\n",
@@ -255,11 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%html\n",
@@ -306,11 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%html\n",
@@ -371,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -381,39 +351,62 @@
     {
      "data": {
       "text/html": [
-       "<!-- html code goes here (make sure to run) -->\n",
+       "<style>\n",
+       "  /* Add CSS to style the button */\n",
+       "  #myButton {\n",
+       "    background-color: #333333;\n",
+       "    color: #00FF00;\n",
+       "    border-radius: 25px;\n",
+       "    padding: 15px 30px;\n",
+       "    transition: all 0.2s ease; /* Add transition for smooth size change */\n",
+       "  }\n",
+       "</style>\n",
        "\n",
-       "<div class=\"jumbotron\">\n",
-       "    <p text-align=\"center\">\n",
-       "        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quis cum nostrum perferendis pariatur impedit laudantium molestiae perspiciatis? Consequuntur dolores harum velit voluptates in. Voluptatibus qui magnam quis velit voluptate.\n",
-       "    </p>\n",
-       "    <br>\n",
-       "    <button type=\"button\" id=\"button123\">Click Me!</button>\n",
+       "<div>\n",
+       "  <p id=\"message\">Click the button below to switch the links and change the button color!</p>\n",
+       "  <button id=\"myButton\">Switch Button</button>\n",
        "</div>\n",
        "\n",
-       "<div class=\"jumbotron\">\n",
-       "    <a href=\"https://www.formula1.com\">Formula 1</a>\n",
-       "    <br>\n",
-       "    <a href=\"https://www.mercedesamgf1.com\">Mercedes AMG F1</a>\n",
-       "    <p>\n",
-       "        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque vel est ratione rerum similique ducimus quidem ea, inventore placeat dignissimos beatae laboriosam, exercitationem esse quisquam sapiente sed omnis optio! Explicabo.\n",
-       "    </p>\n",
+       "<div>\n",
+       "  <a href=\"https://www.youtube.com/watch?v=b65MoVwANq4&t=423s&ab_channel=HeyBearSensory\" id=\"firstLink\">Video 1</a>\n",
+       "  <a href=\"https://www.youtube.com/watch?v=qwIjjcXg868&ab_channel=romder\" id=\"secondLink\">Video 2</a>\n",
+       "  <p>One is a Batman video, the other is of dancing fruit.</p>\n",
        "</div>\n",
        "\n",
        "<script>\n",
-       "    document.getElementById('button123').addEventListener('click', function() {\n",
-       "        // Get the two anchor tags\n",
-       "        var anchors = document.querySelectorAll('.jumbotron a');\n",
-       "        var firstLink = anchors[0].getAttribute('href');\n",
-       "        var secondLink = anchors[1].getAttribute('href');\n",
-       "        \n",
-       "        // Switch the href attributes of the two anchor tags\n",
-       "        anchors[0].setAttribute('href', secondLink);\n",
-       "        anchors[1].setAttribute('href', firstLink);\n",
-       "        \n",
-       "        // Change the inner HTML of the top p tag to \"switched!\"\n",
-       "        document.querySelector('.jumbotron p').innerHTML = \"switched!\";\n",
-       "    });\n",
+       "  let fontSize = 24; // Initial font size\n",
+       "  let padding = 15; // Initial padding size\n",
+       "\n",
+       "  function buttonClick() {\n",
+       "      var firstLinkElement = document.getElementById('firstLink');\n",
+       "      var secondLinkElement = document.getElementById('secondLink');\n",
+       "      var messageElement = document.getElementById('message');\n",
+       "      var buttonElement = document.getElementById('myButton');\n",
+       "\n",
+       "      var firstLinkHref = firstLinkElement.href;\n",
+       "      var secondLinkHref = secondLinkElement.href;\n",
+       "\n",
+       "      firstLinkElement.href = secondLinkHref;\n",
+       "      secondLinkElement.href = firstLinkHref;\n",
+       "\n",
+       "      // Change the button color randomly\n",
+       "      var colors = [\"#FF5733\", \"#33FF57\", \"#5733FF\", \"#FFFF33\", \"#33FFFF\"];\n",
+       "      var randomColor = colors[Math.floor(Math.random() * colors.length)];\n",
+       "      buttonElement.style.backgroundColor = randomColor;\n",
+       "\n",
+       "      // Increase font size and padding on each click\n",
+       "      fontSize += 2;\n",
+       "      padding += 5;\n",
+       "\n",
+       "      // Apply the updated font size and padding\n",
+       "      buttonElement.style.fontSize = fontSize + 'px';\n",
+       "      buttonElement.style.padding = padding + 'px';\n",
+       "\n",
+       "      messageElement.innerHTML = 'Switched!';\n",
+       "  }\n",
+       "\n",
+       "  var buttonElement = document.getElementById('myButton');\n",
+       "  buttonElement.addEventListener('click', buttonClick);\n",
        "</script>\n"
       ],
       "text/plain": [
@@ -426,39 +419,62 @@
    ],
    "source": [
     "%%html\n",
-    "<!-- html code goes here (make sure to run) -->\n",
+    "<style>\n",
+    "  /* Add CSS to style the button */\n",
+    "  #myButton {\n",
+    "    background-color: #333333;\n",
+    "    color: #00FF00;\n",
+    "    border-radius: 25px;\n",
+    "    padding: 15px 30px;\n",
+    "    transition: all 0.2s ease; /* Add transition for smooth size change */\n",
+    "  }\n",
+    "</style>\n",
     "\n",
-    "<div class=\"jumbotron\">\n",
-    "    <p text-align=\"center\">\n",
-    "        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quis cum nostrum perferendis pariatur impedit laudantium molestiae perspiciatis? Consequuntur dolores harum velit voluptates in. Voluptatibus qui magnam quis velit voluptate.\n",
-    "    </p>\n",
-    "    <br>\n",
-    "    <button type=\"button\" id=\"button123\">Click Me!</button>\n",
+    "<div>\n",
+    "  <p id=\"message\">Click the button below to switch the links and change the button color!</p>\n",
+    "  <button id=\"myButton\">Switch Button</button>\n",
     "</div>\n",
     "\n",
-    "<div class=\"jumbotron\">\n",
-    "    <a href=\"https://www.formula1.com\">Formula 1</a>\n",
-    "    <br>\n",
-    "    <a href=\"https://www.mercedesamgf1.com\">Mercedes AMG F1</a>\n",
-    "    <p>\n",
-    "        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque vel est ratione rerum similique ducimus quidem ea, inventore placeat dignissimos beatae laboriosam, exercitationem esse quisquam sapiente sed omnis optio! Explicabo.\n",
-    "    </p>\n",
+    "<div>\n",
+    "  <a href=\"https://www.youtube.com/watch?v=b65MoVwANq4&t=423s&ab_channel=HeyBearSensory\" id=\"firstLink\">Video 1</a>\n",
+    "  <a href=\"https://www.youtube.com/watch?v=qwIjjcXg868&ab_channel=romder\" id=\"secondLink\">Video 2</a>\n",
+    "  <p>One is a Batman video, the other is of dancing fruit.</p>\n",
     "</div>\n",
     "\n",
     "<script>\n",
-    "    document.getElementById('button123').addEventListener('click', function() {\n",
-    "        // Get the two anchor tags\n",
-    "        var anchors = document.querySelectorAll('.jumbotron a');\n",
-    "        var firstLink = anchors[0].getAttribute('href');\n",
-    "        var secondLink = anchors[1].getAttribute('href');\n",
-    "        \n",
-    "        // Switch the href attributes of the two anchor tags\n",
-    "        anchors[0].setAttribute('href', secondLink);\n",
-    "        anchors[1].setAttribute('href', firstLink);\n",
-    "        \n",
-    "        // Change the inner HTML of the top p tag to \"switched!\"\n",
-    "        document.querySelector('.jumbotron p').innerHTML = \"switched!\";\n",
-    "    });\n",
+    "  let fontSize = 24; // Initial font size\n",
+    "  let padding = 15; // Initial padding size\n",
+    "\n",
+    "  function buttonClick() {\n",
+    "      var firstLinkElement = document.getElementById('firstLink');\n",
+    "      var secondLinkElement = document.getElementById('secondLink');\n",
+    "      var messageElement = document.getElementById('message');\n",
+    "      var buttonElement = document.getElementById('myButton');\n",
+    "\n",
+    "      var firstLinkHref = firstLinkElement.href;\n",
+    "      var secondLinkHref = secondLinkElement.href;\n",
+    "\n",
+    "      firstLinkElement.href = secondLinkHref;\n",
+    "      secondLinkElement.href = firstLinkHref;\n",
+    "\n",
+    "      // Change the button color randomly\n",
+    "      var colors = [\"#FF5733\", \"#33FF57\", \"#5733FF\", \"#FFFF33\", \"#33FFFF\"];\n",
+    "      var randomColor = colors[Math.floor(Math.random() * colors.length)];\n",
+    "      buttonElement.style.backgroundColor = randomColor;\n",
+    "\n",
+    "      // Increase font size and padding on each click\n",
+    "      fontSize += 2;\n",
+    "      padding += 5;\n",
+    "\n",
+    "      // Apply the updated font size and padding\n",
+    "      buttonElement.style.fontSize = fontSize + 'px';\n",
+    "      buttonElement.style.padding = padding + 'px';\n",
+    "\n",
+    "      messageElement.innerHTML = 'Switched!';\n",
+    "  }\n",
+    "\n",
+    "  var buttonElement = document.getElementById('myButton');\n",
+    "  buttonElement.addEventListener('click', buttonClick);\n",
     "</script>"
    ]
   }
@@ -479,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
