--- a/_notebooks/2023-12-11-Computing-Bias-Team-Teach.ipynb
+++ b/_notebooks/2023-12-11-Computing-Bias-Team-Teach.ipynb
@@ -10,7 +10,7 @@
     "layout: post\n",
     "title: 5.3 Computing Bias Lesson\n",
     "description: Computing Bias Lesson\n",
-    "courses: {csp: {week: 16}}\n",
+    "courses: {compsci: {week: 13}}\n",
     "type: hacks\n",
     "---"
    ]
@@ -41,7 +41,7 @@
     "C. An image recognition algorithm identifies objects in photographs with high accuracy, regardless of the gender, ethnicity, or age of the individuals depicted.<br>\n",
     "D. An automated hiring system consistently favors candidates from specific educational institutions and backgrounds, resulting in the exclusion of qualified applicants from diverse backgrounds.\n",
     "\n",
-    "D is the answer"
+    "The answer is D"
    ]
   },
   {
@@ -67,9 +67,14 @@
    "metadata": {},
    "source": [
     "## Popcorn Hack #2:\n",
-    "An online example of computing bias is when an HP computer’s facial recognition system couldn’t track the face of someone with darker skin. Why is this and what type of bias is it? Do you think it was intentional or unintentional?\n",
-    "\n",
-    "The bias experienced by an HP computer's facial recognition system, which failed to track the face of someone with darker skin, is a form of algorithmic bias. This unintentional bias arises from imbalances in the training data used to train the system. If the dataset primarily consists of individuals with lighter skin tones, the system may struggle to accurately recognize and track individuals with darker skin tones. It is important to recognize that such biases are not intentionally programmed, but rather a result of flawed or limited training data. Efforts are being made by developers and researchers to address these biases and create more inclusive and fair technologies."
+    "An online example of computing bias is when an HP computer’s facial recognition system couldn’t track the face of someone with darker skin. Why is this and what type of bias is it? Do you think it was intentional or unintentional?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Bias because the developers at HP did not imput data of people with darker skin, and probibly did not test the facial recognition on people with dark skin. I dont think this was intentional, just ignorance from the developers. "
    ]
   },
   {
@@ -91,9 +96,14 @@
    "source": [
     "## Popcorn Hack #3:\n",
     "\n",
-    "- What is another scenario of data collection in everyday applications and situations?\n",
-    "\n",
-    "GPS navigation apps on smartphones collect data like location, speed, and travel history to provide accurate directions and real-time traffic information. This data is used to improve the app's functionality and enhance the user experience."
+    "- What is another scenario of data collection in everyday applications and situations?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WHen you are on youtube and you watch a video, it colloects that data and recomends similar videos. "
    ]
   },
   {
@@ -148,14 +158,11 @@
     "## Homework:\n",
     "Problem: Biased Predictive Policing Algorithm: A city implements a predictive policing algorithm to allocate law enforcement resources more efficiently. \n",
     "However, concerns arise as community members and activists notice that the algorithm appears to disproportionately target certain neighborhoods, leading to over-policing and potential violations of civil rights.\n",
-    "Provide a solution to how this situation can be resolved, and how the computing bias can be removed. Explain which method of mitigation you will use and how it works. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer: To fix the issue and make sure the predictive policing system is fair, the best solution is to adjust the algorithm through classifier correction. This means tweaking the settings of the algorithm to deal with biases and make sure all neighborhoods are treated fairly. By doing this, we can reduce the chances of unfairly targeting certain areas, making law enforcement more just and avoiding problems with civil rights. It's like fine-tuning the system to treat everyone equally."
+    "Provide a solution to how this situation can be resolved, and how the computing bias can be removed. Explain which method of mitigation you will use and how it works. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "This situation could be solved by having a fair 3rd party orginization monitor and maintain the algorithm making sure that it is operating fairly. They could also conduct regular and independent audits of the algorithm's outcomes to identify and rectify biased patterns. These audits should involve external experts, community representatives, and civil rights organizations to ensure objectivity. This is output correction, because it is fixing the bias after the algorithm runs. To fully resolve the situation, law enforcement would have to make sure their data collection systems are working perfectly."
    ]
   }
  ],
