--- a/_notebooks/2023-12-13-UndecidedProblems.ipynb
+++ b/_notebooks/2023-12-13-UndecidedProblems.ipynb
@@ -9,7 +9,7 @@
     "comments: true\n",
     "layout: post\n",
     "title: 3.8 Undecided Problems Team Teach\n",
-    "courses: {csp: {week: 16}}\n",
+    "courses: {compsci: {week: 12}}\n",
     "type: hacks\n",
     "---"
    ]
@@ -239,15 +239,6 @@
     "Please review and read the lesson and then answer the google form questions. \n",
     "\n",
     "<a href=\"https://docs.google.com/forms/d/e/1FAIpQLScdkCjjYFUBdRN9O1icNyhM5hWNue0VzPXlCZ5q3QGGsN_Vsw/viewform?usp=usp=sf_link\"> Google Form Quiz</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Quiz Score: 100%\n",
-    "<br>\n",
-    "Summary: Some problems cannot be solved using algorithms that provide exact solutions, so we resort to using algorithms that give approximate solutions. These problems are known as undecidable problems, which are solvable by any algorithm that always produces a correct yes-or-no answer. While some instances of an undecidable problem may have algorithmic solutions, there is no algorithm that can solve all instances of the problem."
    ]
   }
  ],
