--- a/_notebooks/2023-12-18-Legal-Ethical-Concerns.ipynb
+++ b/_notebooks/2023-12-18-Legal-Ethical-Concerns.ipynb
@@ -8,8 +8,8 @@
     "toc: true\n",
     "comments: true\n",
     "layout: post\n",
-    "title: 5.5 Legal & Ethical Concerns\n",
-    "courses: {csp: {week: 17}}\n",
+    "title: 5.5 Legal and Ethical\n",
+    "courses: {compsci: {week: 13}}\n",
     "type: hacks\n",
     "---"
    ]
@@ -90,7 +90,9 @@
    "source": [
     "## Popcorn Hack #1\n",
     "\n",
-    "What is the primary purpose of Copyright law, and how does it protect Intellectual Property? Provide a brief explanation of the key rights granted to creators under Copyright."
+    "What is the primary purpose of Copyright law, and how does it protect Intellectual Property? Provide a brief explanation of the key rights granted to creators under Copyright.\n",
+    "\n",
+    "It pretects peoples ideas and work like a patent but online. It is enforced by the law to protect peoples IP."
    ]
   },
   {
@@ -123,7 +125,9 @@
    "source": [
     "## Popcorn Hack #2\n",
     "\n",
-    "What are the main advantages of Open Source software? How does it foster collaboration in the development community?"
+    "What are the main advantages of Open Source software? How does it foster collaboration in the development community?\n",
+    "\n",
+    "Since everyone can work on the software for free and open to the public, alot of ideas from the comunity can be added to the software. "
    ]
   },
   {
