--- a/_notebooks/2024-01-14-SASS.ipynb
+++ b/_notebooks/2024-01-14-SASS.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: true\n",
-    "comments: true\n",
+    "toc: False\n",
     "layout: post\n",
+    "hide: false\n",
     "title: P2 | SASS\n",
-    "courses: { csp: {week: 19} }\n",
     "description: Team Teach On SASS\n",
+    "courses: {'compsci': {'week': 15}}\n",
     "type: hacks\n",
     "---"
    ]
