--- a/_notebooks/2024-01-16-Python_Flask.ipynb
+++ b/_notebooks/2024-01-16-Python_Flask.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: true\n",
-    "comments: true\n",
+    "toc: False\n",
     "layout: post\n",
+    "hide: false\n",
     "title: P2 | Python/Flask\n",
-    "courses: { csp: {week: 19} }\n",
     "description: Team Teach On Python/Flask\n",
-    "type: tangibles\n",
+    "courses: {'compsci': {'week': 16}}\n",
+    "type: hacks\n",
     "---"
    ]
   },
