--- a/_notebooks/2023-08-28-basics-home.ipynb
+++ b/_notebooks/2023-08-28-basics-home.ipynb
@@ -8,8 +8,8 @@
     "layout: post\n",
     "title: Web Programming Basics\n",
     "description: An introduction to key topics in Web Programming\n",
-    "courses: {csp: {week: 5} }\n",
-    "type: plans\n",
+    "courses: { compsci: { week: 5 } }\n",
+    "type: hacks\n",
     "permalink: /basics/home\n",
     "---"
    ]
@@ -18,7 +18,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "{% include nav_basics.html %}\n"
+    "{% include nav_basics.html %}"
    ]
   },
   {
