--- a/_notebooks/2023-08-28-basics-html.ipynb
+++ b/_notebooks/2023-08-28-basics-html.ipynb
@@ -9,11 +9,9 @@
     "hide: True\n",
     "title: Basics of HTML Guide\n",
     "description: An introduction to basic HTML, and resources to learn more.\n",
-    "type: hacks\n",
+    "type: ccc\n",
     "permalink: /basics/html\n",
     "author: Rohan Juneja\n",
-    "comments: True\n",
-    "courses: {csp: {week: 5} }\n",
     "---"
    ]
   },
@@ -21,7 +19,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "{% include nav_basics.html %}\n"
+    "{% include nav_basics.html %}"
    ]
   },
   {
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -232,7 +230,7 @@
     "- Below is a wireframe for an HTML element you will create. A wireframe is a rough visual representation of HTML elements on a page and isn't necessarily to scale or have the exact styling that the final HTML will have. Using the syntax above, try to create an HTML snippet that corresponds to the below wireframe.\n",
     "- The \"a tags\" can contain any links that you want\n",
     "\n",
-    "![wireframe for html hacks]({{ site.baseurl }}https://nighthawkcoders.github.io/teacher/images/wireframe.png)"
+    "![wireframe for html hacks]({{ site.baseurl }}/images/wireframe.png)"
    ]
   },
   {
@@ -247,24 +245,52 @@
     {
      "data": {
       "text/html": [
+       "<!-- First Div -->\n",
+       "<div>\n",
+       "    \n",
+       "    <strong style=\"background-color: black; color: #00FF00;\">Batman HTML Hacks By: Ronit Thomas, Aswhin Visvananth, Vance Reynolds, Jared Baza</strong><br>\n",
        "\n",
-       "<div class=\"jumbotron\">\n",
-       "    <p text-align=\"center\">\n",
-       "        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quis cum nostrum perferendis pariatur impedit laudantium molestiae perspiciatis? Consequuntur dolores harum velit voluptates in. Voluptatibus qui magnam quis velit voluptate.\n",
-       "    </p>\n",
-       "    <br>\n",
-       "    <button type=\"button\">Click Me!</button>\n",
-       "</div>\n",
+       "</div><br>\n",
        "\n",
-       "<br>\n",
        "\n",
-       "<div class=\"jumbotron\">\n",
-       "    <a href=\"https://www.formula1.com\">Formula 1</a>\n",
-       "    <br>\n",
-       "    <a href=\"https://www.mercedesamgf1.com\">Mercedes AMG F1</a>\n",
-       "    <p>\n",
-       "        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque vel est ratione rerum similique ducimus quidem ea, inventore placeat dignissimos beatae laboriosam, exercitationem esse quisquam sapiente sed omnis optio! Explicabo.\n",
-       "    </p>\n",
+       "\n",
+       "\n",
+       "\n",
+       "<!-- Third Div -->\n",
+       "<div>\n",
+       "    <body>\n",
+       "        <head>\n",
+       "           <title>Superhero Text Entry</title>\n",
+       "        </head>\n",
+       "        <p style=\"background-color: black; color: #00FF00;\">Add your Superhero Information below:</p>\n",
+       "        <form style=\"background-color: black; color: #00FF00;\">\n",
+       "           Enter your Name:<br> <input type=\"text\" name=\"name\">\n",
+       "           <br>\n",
+       "           Enter your Alias<br> <input type=\"text\" name=\"alias\">\n",
+       "           <br>\n",
+       "           Enter your Power:<br> <input type=\"text\" name=\"power\">\n",
+       "        </form>\n",
+       "     </body>\n",
+       "\n",
+       "     <!-- Third Div -->\n",
+       "\n",
+       "<div><br>\n",
+       "    <a href=\"https://www.youtube.com/\" style=\"color: 00FF00; background-color: #0e2dde74;\">Batman Youtube Video</a><br>  \n",
+       "    <a style=\"background-color: black; color: #00FF00;\" href=\"https://www.youtube.com/shorts/4W1ztRlJ7D0\">\n",
+       "        <button onllick button style=\"background-color: #333333; color:#00FF00; border-radius: 10px\">Batman Edit</button>\n",
+       "    </a><br> \n",
+       "\n",
+       "\n",
+       "<button id=\"myButton\" style=\"background-color: #333333; color:#00FF00; border-radius: 10px\">Click For Luck</button><br>\n",
+       "<strong style=\"background-color: black; color: #00FF00;\">The End</strong><br>\n",
+       "\n",
+       "<script>\n",
+       "    function buttonClick() {\n",
+       "        alert('Luck Applied!');\n",
+       "    }\n",
+       "    var buttonElement = document.getElementById('myButton');\n",
+       "    buttonElement.addEventListener('click', buttonClick);\n",
+       "</script>\n",
        "</div>\n"
       ],
       "text/plain": [
@@ -277,24 +303,52 @@
    ],
    "source": [
     "%%html\n",
+    "<!-- First Div -->\n",
+    "<div>\n",
+    "    \n",
+    "    <strong style=\"background-color: black; color: #00FF00;\">Batman HTML Hacks By: Ronit Thomas, Aswhin Visvananth, Vance Reynolds, Jared Baza</strong><br>\n",
     "\n",
-    "<div class=\"jumbotron\">\n",
-    "    <p text-align=\"center\">\n",
-    "        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quis cum nostrum perferendis pariatur impedit laudantium molestiae perspiciatis? Consequuntur dolores harum velit voluptates in. Voluptatibus qui magnam quis velit voluptate.\n",
-    "    </p>\n",
-    "    <br>\n",
-    "    <button type=\"button\">Click Me!</button>\n",
-    "</div>\n",
+    "</div><br>\n",
     "\n",
-    "<br>\n",
     "\n",
-    "<div class=\"jumbotron\">\n",
-    "    <a href=\"https://www.formula1.com\">Formula 1</a>\n",
-    "    <br>\n",
-    "    <a href=\"https://www.mercedesamgf1.com\">Mercedes AMG F1</a>\n",
-    "    <p>\n",
-    "        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque vel est ratione rerum similique ducimus quidem ea, inventore placeat dignissimos beatae laboriosam, exercitationem esse quisquam sapiente sed omnis optio! Explicabo.\n",
-    "    </p>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<!-- Third Div -->\n",
+    "<div>\n",
+    "    <body>\n",
+    "        <head>\n",
+    "           <title>Superhero Text Entry</title>\n",
+    "        </head>\n",
+    "        <p style=\"background-color: black; color: #00FF00;\">Add your Superhero Information below:</p>\n",
+    "        <form style=\"background-color: black; color: #00FF00;\">\n",
+    "           Enter your Name:<br> <input type=\"text\" name=\"name\">\n",
+    "           <br>\n",
+    "           Enter your Alias<br> <input type=\"text\" name=\"alias\">\n",
+    "           <br>\n",
+    "           Enter your Power:<br> <input type=\"text\" name=\"power\">\n",
+    "        </form>\n",
+    "     </body>\n",
+    "\n",
+    "     <!-- Third Div -->\n",
+    "\n",
+    "<div><br>\n",
+    "    <a href=\"https://www.youtube.com/\" style=\"color: 00FF00; background-color: #0e2dde74;\">Batman Youtube Video</a><br>  \n",
+    "    <a style=\"background-color: black; color: #00FF00;\" href=\"https://www.youtube.com/shorts/4W1ztRlJ7D0\">\n",
+    "        <button onllick button style=\"background-color: #333333; color:#00FF00; border-radius: 10px\">Batman Edit</button>\n",
+    "    </a><br> \n",
+    "\n",
+    "\n",
+    "<button id=\"myButton\" style=\"background-color: #333333; color:#00FF00; border-radius: 10px\">Click For Luck</button><br>\n",
+    "<strong style=\"background-color: black; color: #00FF00;\">The End</strong><br>\n",
+    "\n",
+    "<script>\n",
+    "    function buttonClick() {\n",
+    "        alert('Luck Applied!');\n",
+    "    }\n",
+    "    var buttonElement = document.getElementById('myButton');\n",
+    "    buttonElement.addEventListener('click', buttonClick);\n",
+    "</script>\n",
     "</div>"
    ]
   }
@@ -315,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
