--- a/_notebooks/2023-09-20-1_4-js-errors.ipynb
+++ b/_notebooks/2023-09-20-1_4-js-errors.ipynb
@@ -8,16 +8,15 @@
     "layout: post\n",
     "title: 1.4 Correcting errors\n",
     "description: Practice with identifying and correcting code blocks\n",
-    "type: hacks\n",
+    "type: ccc\n",
     "author: Safin Singh and Rohan Juneja\n",
     "permalink: /basics/js-debug\n",
-    "comments: True\n",
-    "courses: {csp: {week: 5} }\n",
+    "hide: True\n",
     "---"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "{% include nav_basics.html %}"
@@ -59,49 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "html"
+     "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<script>\n",
-       "var alphabet = \"abcdefghijklmnopqrstuvwxyz\";\n",
-       "var alphabetList = [];\n",
-       "\n",
-       "for (var i = 0; i < 10; i++) {\n",
-       "\talphabetList.push(alphabet[i]);\n",
-       "}\n",
-       "\n",
-       "console.log(alphabetList);\n",
-       "</script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%html\n",
+    "%%js\n",
     "\n",
-    "<script>\n",
     "var alphabet = \"abcdefghijklmnopqrstuvwxyz\";\n",
     "var alphabetList = [];\n",
     "\n",
     "for (var i = 0; i < 10; i++) {\n",
-    "\talphabetList.push(alphabet[i]);\n",
+    "\talphabetList.push(i);\n",
     "}\n",
     "\n",
-    "console.log(alphabetList);\n",
-    "</script>"
+    "console.log(alphabetList);"
    ]
   },
   {
@@ -110,7 +84,7 @@
    "source": [
     "### What I Changed\n",
     "\n",
-    "I changed instead of having i being pushed into the list, we index the letter using its index from i."
+    "I changed..."
    ]
   },
   {
@@ -131,75 +105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "html"
+     "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<script>\n",
-       "// Copy your previous code to built alphabetList here\n",
-       "var alphabet = \"abcdefghijklmnopqrstuvwxyz\";\n",
-       "var alphabetList = [];\n",
-       "\n",
-       "for (var i = 0; i < 10; i++) {\n",
-       "\talphabetList.push(alphabet[i]);\n",
-       "}\n",
-       "\n",
-       "console.log(alphabetList);\n",
-       "\n",
-       "let letterNumber = 4\n",
-       "\n",
-       "for (var i = 0; i < alphabetList.length; i++) {\n",
-       "\tif (i === letterNumber) {\n",
-       "\t\tconsole.log(alphabetList[letterNumber] + \" is letter number \" + (letterNumber+1) + \"in the alphabet\")\n",
-       "\t}\n",
-       "}\n",
-       "\n",
-       "// Should output:\n",
-       "// \"e\" is letter number 5 in the alphabet\n",
-       "\n",
-       "</script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%html\n",
+    "%%js\n",
     "\n",
-    "<script>\n",
     "// Copy your previous code to built alphabetList here\n",
-    "var alphabet = \"abcdefghijklmnopqrstuvwxyz\";\n",
-    "var alphabetList = [];\n",
     "\n",
-    "for (var i = 0; i < 10; i++) {\n",
-    "\talphabetList.push(alphabet[i]);\n",
-    "}\n",
+    "let letterNumber = 5\n",
     "\n",
-    "console.log(alphabetList);\n",
-    "\n",
-    "let letterNumber = 4\n",
-    "\n",
-    "for (var i = 0; i < alphabetList.length; i++) {\n",
+    "for (var i = 0; i < alphabetList; i++) {\n",
     "\tif (i === letterNumber) {\n",
-    "\t\tconsole.log(alphabetList[letterNumber] + \" is letter number \" + (letterNumber+1) + \"in the alphabet\")\n",
+    "\t\tconsole.log(letterNumber + \" is letter number 1 in the alphabet\")\n",
     "\t}\n",
     "}\n",
     "\n",
     "// Should output:\n",
-    "// \"e\" is letter number 5 in the alphabet\n",
-    "\n",
-    "</script>"
+    "// \"e\" is letter number 5 in the alphabet"
    ]
   },
   {
@@ -208,7 +135,7 @@
    "source": [
     "### What I Changed\n",
     "\n",
-    "I added my original list and changed letternumber to 4. I also changed the condition to alphabetList.length. I also changed the console.log to alphabetList[letterNumber] + \" is letter number \" + (letterNumber+1) + \"in the alphabet\""
+    "I changed..."
    ]
   },
   {
@@ -224,51 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "html"
+     "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<script>\n",
-       "let odds = [];\n",
-       "let i1 = 1;\n",
-       "\n",
-       "while (i1 <= 10) {\n",
-       "  odds.push(i1);\n",
-       "  i1 += 2;\n",
-       "}\n",
-       "\n",
-       "console.log(odds);\n",
-       "</script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%html\n",
+    "%%js\n",
     "\n",
-    "<script>\n",
-    "let odds = [];\n",
-    "let i1 = 1;\n",
+    "let evens = [];\n",
+    "let i = 0;\n",
     "\n",
-    "while (i1 <= 10) {\n",
-    "  odds.push(i1);\n",
-    "  i1 += 2;\n",
+    "while (i <= 10) {\n",
+    "  evens.push(i);\n",
+    "  i += 2;\n",
     "}\n",
     "\n",
-    "console.log(odds);\n",
-    "</script>"
+    "console.log(evens);"
    ]
   },
   {
@@ -277,7 +178,7 @@
    "source": [
     "### What I Changed\n",
     "\n",
-    "I changed the list to odds and changed to i to 1. Then it ouputs the odd numnbers."
+    "I changed..."
    ]
   },
   {
@@ -298,52 +199,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "html"
+     "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<script>\n",
-       "var newNumbers = [];\n",
-       "\n",
-       "for (var i = 1; i <= 100; i++) {\n",
-       "    if (i % 5 === 0 || i % 2 === 0) {\n",
-       "        newNumbers.push(i);\n",
-       "    }\n",
-       "}\n",
-       "\n",
-       "console.log(newNumbers);\n",
-       "</script>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%html\n",
+    "%%js\n",
     "\n",
-    "<script>\n",
-    "var newNumbers = [];\n",
+    "var numbers = []\n",
+    "var newNumbers = []\n",
+    "var i = 0\n",
     "\n",
-    "for (var i = 1; i <= 100; i++) {\n",
-    "    if (i % 5 === 0 || i % 2 === 0) {\n",
-    "        newNumbers.push(i);\n",
-    "    }\n",
+    "while (i < 100) {\n",
+    "    numbers.push(i)\n",
+    "    i += 1\n",
     "}\n",
-    "\n",
-    "console.log(newNumbers);\n",
-    "</script>\n",
+    "for (var i of numbers) {\n",
+    "    if (numbers[i] % 5 === 0)\n",
+    "        newNumbers.push(numbers[i])\n",
+    "    if (numbers[i] % 2 === 0)\n",
+    "        newNumbers.push(numbers[i])\n",
+    "}\n",
+    "console.log(newNumbers) \n",
     "\n"
    ]
   },
@@ -368,91 +248,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "html"
+     "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<script>\n",
-       "var menu = {\n",
-       "    \"burger\": 3.99,\n",
-       "    \"fries\": 1.99,\n",
-       "    \"drink\": 0.99\n",
-       "};\n",
-       "\n",
-       "var selectedItems = []; \n",
-       "\n",
-       "// Show the user the menu and prompt them to select items\n",
-       "console.log(\"Menu\");\n",
-       "for (var item in menu) {\n",
-       "    console.log(item + \"  $\" + menu[item].toFixed(2));\n",
-       "}\n",
-       "\n",
-       "// Simulate user selecting items\n",
-       "selectedItems.push(\"burger\"); // User selects a burger\n",
-       "selectedItems.push(\"fries\");  // User selects fries\n",
-       "selectedItems.push(\"drink\");  // User selects a drink\n",
-       "\n",
-       "// Calculate the total cost based on selected items\n",
-       "var total = 0;\n",
-       "for (var i = 0; i < selectedItems.length; i++) {\n",
-       "    var selectedItem = selectedItems[i];\n",
-       "    if (menu[selectedItem]) {\n",
-       "        total += menu[selectedItem];\n",
-       "    }\n",
-       "}\n",
-       "\n",
-       "console.log(\"Total: $\" + total.toFixed(2)); // Display the total cost\n",
-       "</script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%html\n",
+    "%%js\n",
     "\n",
-    "<script>\n",
-    "var menu = {\n",
-    "    \"burger\": 3.99,\n",
-    "    \"fries\": 1.99,\n",
-    "    \"drink\": 0.99\n",
-    "};\n",
+    "var menu =  {\"burger\": 3.99,\n",
+    "         \"fries\": 1.99,\n",
+    "         \"drink\": 0.99}\n",
+    "var total = 0\n",
     "\n",
-    "var selectedItems = []; \n",
-    "\n",
-    "// Show the user the menu and prompt them to select items\n",
-    "console.log(\"Menu\");\n",
+    "//shows the user the menu and prompts them to select an item\n",
+    "console.log(\"Menu\")\n",
     "for (var item in menu) {\n",
-    "    console.log(item + \"  $\" + menu[item].toFixed(2));\n",
+    "    console.log(item + \"  $\" + menu[item].toFixed(2)) //why is toFixed used?\n",
     "}\n",
+    "//ideally the code should support mutliple items\n",
+    "var item = \"burger\"\n",
     "\n",
-    "// Simulate user selecting items\n",
-    "selectedItems.push(\"burger\"); // User selects a burger\n",
-    "selectedItems.push(\"fries\");  // User selects fries\n",
-    "selectedItems.push(\"drink\");  // User selects a drink\n",
-    "\n",
-    "// Calculate the total cost based on selected items\n",
-    "var total = 0;\n",
-    "for (var i = 0; i < selectedItems.length; i++) {\n",
-    "    var selectedItem = selectedItems[i];\n",
-    "    if (menu[selectedItem]) {\n",
-    "        total += menu[selectedItem];\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "console.log(\"Total: $\" + total.toFixed(2)); // Display the total cost\n",
-    "</script>\n"
+    "//code should add the price of the menu items selected by the user \n",
+    "console.log(total)"
    ]
   },
   {
@@ -480,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
