--- a/_notebooks/2023-10-16-js_object_oriented_programming copy.ipynb
+++ b/_notebooks/2023-10-16-js_object_oriented_programming copy.ipynb
@@ -7,10 +7,11 @@
     "---\n",
     "toc: false\n",
     "layout: post\n",
-    "title: Javascript Object\n",
+    "title: Javascript Object Oriented Programming\n",
     "description: Tech talk going over object oriented progamming in javascript\n",
-    "type: hacks\n",
-    "courses: {compsci: {week: 7} }\n",
+    "type: plans\n",
+    "courses: { csse: {week: 9}, csp: {week: 8}, csa: {week: 11} }\n",
+    "unit: 3\n",
     "---"
    ]
   },
@@ -61,12 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -114,35 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "// Make a small class that could relate to your passion project here\nclass Cat{\n    constructor(furColor, weight, breed, sound){\n        // 'this' here is used to say that this attribute belongs to this class\n        this.furColor = furColor;\n        this.weight = weight;\n        this.breed = breed;\n        this.sound = sound;\n    }\n",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%js\n",
     "// Make a small class that could relate to your passion project here\n",
-    "class Cat {\n",
-    "    constructor(furColor, weight, breed, sound){\n",
+    "class College {\n",
+    "    constructor(name, ranking, location){\n",
     "        // 'this' here is used to say that this attribute belongs to this class\n",
-    "        this.furColor = furColor;\n",
-    "        this.weight = weight;\n",
-    "        this.breed = breed;\n",
-    "        this.sound = sound;\n",
-    "    }"
+    "        this.name = name;\n",
+    "        this.ranking = ranking;\n",
+    "        this.location = location;\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -161,11 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -264,7 +242,7 @@
    "outputs": [],
    "source": [
     "%%js\n",
-    "// Make a parent class and a child class related to your passion project"
+    "// Make a parent class and a child class related to your passion project\n"
    ]
   },
   {
@@ -329,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
