--- a/_notebooks/2023-10-16-js_object_oriented_programming.ipynb
+++ b/_notebooks/2023-10-16-js_object_oriented_programming.ipynb
@@ -7,11 +7,10 @@
     "---\n",
     "toc: false\n",
     "layout: post\n",
-    "title: Javascript Object Oriented Programming\n",
+    "title: Javascript Object\n",
     "description: Tech talk going over object oriented progamming in javascript\n",
-    "type: plans\n",
-    "courses: { csse: {week: 9}, csp: {week: 8}, csa: {week: 11} }\n",
-    "unit: 3\n",
+    "type: hacks\n",
+    "courses: {compsci: {week: 7} }\n",
     "---"
    ]
   },
@@ -62,8 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -111,20 +114,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "// Make a small class that could relate to your passion project here\nclass Cat{\n    constructor(furColor, weight, breed, sound){\n        // 'this' here is used to say that this attribute belongs to this class\n        this.furColor = furColor;\n        this.weight = weight;\n        this.breed = breed;\n        this.sound = sound;\n    }\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js\n",
     "// Make a small class that could relate to your passion project here\n",
-    "class College {\n",
-    "    constructor(name, ranking, location){\n",
+    "class Cat {\n",
+    "    constructor(furColor, weight, breed, sound){\n",
     "        // 'this' here is used to say that this attribute belongs to this class\n",
-    "        this.name = name;\n",
-    "        this.ranking = ranking;\n",
-    "        this.location = location;\n",
-    "    }\n",
-    "}"
+    "        this.furColor = furColor;\n",
+    "        this.weight = weight;\n",
+    "        this.breed = breed;\n",
+    "        this.sound = sound;\n",
+    "    }"
    ]
   },
   {
@@ -143,7 +161,11 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -242,7 +264,7 @@
    "outputs": [],
    "source": [
     "%%js\n",
-    "// Make a parent class and a child class related to your passion project\n"
+    "// Make a parent class and a child class related to your passion project"
    ]
   },
   {
@@ -307,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
