--- a/_notebooks/2023-11-27-Internet.ipynb
+++ b/_notebooks/2023-11-27-Internet.ipynb
@@ -8,9 +8,8 @@
     "toc: True\n",
     "comments: True\n",
     "title: The Internet\n",
-    "layout: post\n",
     "description: Exploring the Internet\n",
-    "courses: {'csp': {'week': 13}}\n",
+    "courses: {'compsci': {'week': 13}}\n",
     "type: hacks\n",
     "---"
    ]
