--- a/_notebooks/2023-12-21-Safe_computing.ipynb
+++ b/_notebooks/2023-12-21-Safe_computing.ipynb
@@ -10,8 +10,8 @@
     "hide: False\n",
     "title: P2 | 5.6 - Safe Computing\n",
     "description: Team Teach On Safe Computing\n",
-    "courses: {'csp': {'week': 17}}\n",
-    "type: tangibles\n",
+    "courses: {'compsci': {'week': 14}}\n",
+    "type: hacks\n",
     "---"
    ]
   },
@@ -67,7 +67,9 @@
    "metadata": {},
    "source": [
     "### Popcorn Hack #1\n",
-    "What measures can individuals take to better protect their PII in an increasingly interconnected digital world?"
+    "What measures can individuals take to better protect their PII in an increasingly interconnected digital world?\n",
+    "\n",
+    "They can use a VPN or opt out of data collection settings on websites. They should also only visit secure trusted websites."
    ]
   },
   {
@@ -135,7 +137,10 @@
     "This way, no matter what, our private keys are not accessible anywhere, and people can only encrypt messages if our public keys are leaked, and not decrypt them.\n",
     "\n",
     "## Popcorn Hack #2\n",
-    "- Let's say we have an encrypted message \"mjqqt\". If the Caesar cipher shifted the letters by 5, what is the original message?\n"
+    "- Let's say we have an encrypted message \"mjqqt\". If the Caesar cipher shifted the letters by 5, what is the original message?\n",
+    "\n",
+    "The original message is hello.\n",
+    "\n"
    ]
   },
   {
