--- a/_posts/2024-03-12-AUDIO.md
+++ b/_posts/2024-03-12-AUDIO.md
@@ -1,21 +1,22 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Play Audio on Button Click</title>
+    <title>Play Audio on Button Click</title>
 </head>
 <body>
 
 <button onclick="playAudio()">Play Mario Death Sound</button>
 
-<audio id="marioDeathAudio" src="marioDeath.mp3"></audio>
+<!-- Audio element for playing the sound. It can go anywhere within the body. -->
+<audio id="marioDeathAudio" src="assets/audio/marioDeath.mp3"></audio>
 
 <script>
+// JavaScript function to play the audio.
 function playAudio() {
     var audio = document.getElementById("marioDeathAudio");
     audio.play();
 }
-
 </script>
 
 </body>
-
 </html>
