--- a/_posts/2024-03-12-AUDIO.md
+++ b/_posts/2024-03-12-AUDIO.md
@@ -1,3 +1,12 @@
+# Play Audio on Button Click
+
+Create an HTML document to play the `marioDeath.mp3` audio file when a button is clicked. Ensure the audio file is placed in the `assets/audio` directory of your project.
+
+## HTML Code
+
+Below is the complete HTML code you need to use:
+
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,11 +16,11 @@
 
 <button onclick="playAudio()">Play Mario Death Sound</button>
 
-<!-- Audio element for playing the sound. It can go anywhere within the body. -->
+<!-- Audio element for the marioDeath.mp3 file -->
 <audio id="marioDeathAudio" src="assets/audio/marioDeath.mp3"></audio>
 
 <script>
-// JavaScript function to play the audio.
+// Function to play audio
 function playAudio() {
     var audio = document.getElementById("marioDeathAudio");
     audio.play();
